--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,7 @@
   xmlns="http://www.w3.org/1999/xhtml"
   xml:lang="en-US"
   lang="en-US"
-><!--<![endif]-->
-  <!-- Mirrored from themesflat.com/html/kababi/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Jul 2022 17:03:14 GMT -->
+>
   <head>
     <meta charset="utf-8" />
     <!--[if IE
@@ -21,8 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/icon.png" />
+   <link rel="shortcut icon" href="assets/img/fev.png" />
   </head>
   <body class="header-fixed2">
     <div id="loading-overlay">
@@ -247,8 +245,7 @@
                 <div id="bottom" class="tf-bottom-inner">
                   <div class="Copyright">
                     <p>
-                      Copyright © 2021 The Kababi - Restaurant HTML Template.
-                      Designed by
+                      © 2022 All Rights Reserved By Perilune General Trading LLc
                       <a
                         href="https://themeforest.net/user/themesflat/portfolio"
                         >Themesflat</a
@@ -292,5 +289,5 @@
     <script src="assets/js/swiper.js"></script>
   </body>
 
-  <!-- Mirrored from themesflat.com/html/kababi/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Jul 2022 17:03:15 GMT -->
+  
 </html>
