--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   xmlns="http://www.w3.org/1999/xhtml"
   xml:lang="en-US"
   lang="en-US"
-><!--<![endif]-->
-  <!-- Mirrored from themesflat.com/html/kababi/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Jul 2022 17:01:28 GMT -->
+>
   <head>
     <meta charset="utf-8" />
     <!--[if IE
@@ -21,8 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/logo.html" />
+    <link rel="shortcut icon" href="assets/img/fev.png" />
   </head>
   <body class="counter-scroll header-fixed">
     <div id="loading-overlay">
@@ -131,7 +129,7 @@
                       data-wow-duration="500ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-cheeseburger"></i>
+                        <img src="assets/img/wheat-sack.png" alt=""/>
                       </div>
                       <h6 class="heading">Wheat Flour</h6>
                       <div class="btn-icon-box"></div>
@@ -144,7 +142,7 @@
                       data-wow-duration="700ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-pizza"></i>
+                        <img src="assets/img/refind flavour.png" alt=""/>
                       </div>
                       <h6 class="heading">Refined Flour</h6>
                       <div class="btn-icon-box"></div>
@@ -157,7 +155,7 @@
                       data-wow-duration="900ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-coffee-cup"></i>
+                        <img src="assets/img/coconut.png" alt=""/>
                       </div>
                       <h6 class="heading">coconut</h6>
                       <div class="btn-icon-box"></div>
@@ -170,7 +168,7 @@
                       data-wow-duration="1100ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-chicken-leg"></i>
+                        <img src="assets/img/onion.png" alt=""/>
                       </div>
                       <h6 class="heading">onion</h6>
                       <div class="btn-icon-box"></div>
@@ -183,7 +181,7 @@
                       data-wow-duration="1300ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-drink"></i>
+                        <img src="assets/img/avocado.png" alt=""/>
                       </div>
                       <h6 class="heading">avocado</h6>
                       <div class="btn-icon-box"></div>
@@ -196,7 +194,7 @@
                       data-wow-duration="1500ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-shrimp"></i>
+                        <img src="assets/img/apples.png" alt=""/>
                       </div>
                       <h6 class="heading">apple</h6>
                       <div class="btn-icon-box"></div>
@@ -209,7 +207,7 @@
                       data-wow-duration="1500ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-shrimp"></i>
+                        <img src="assets/img/orange.png" alt=""/>
                       </div>
                       <h6 class="heading">oranges</h6>
                       <div class="btn-icon-box"></div>
@@ -222,7 +220,7 @@
                       data-wow-duration="1500ms"
                     >
                       <div class="icon-wrap margin-bt-2">
-                        <i class="flaticon-shrimp"></i>
+                        <img src="assets/img/sugar.png" alt=""/>
                       </div>
                       <h6 class="heading">sugar</h6>
                       <div class="btn-icon-box"></div>
@@ -400,7 +398,7 @@
                   data-wow-delay="0.3ms"
                   data-wow-duration="1500ms"
                 >
-                  <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
+                  <img src="assets/img/why.jpg" alt="" />
                 </div>
               </div>
               <div class="col-md-6 no-pd-left">
@@ -454,7 +452,7 @@
                 >
                   <div class="team-hover">
                     <div class="image">
-                      <img src="/assets/img/our-chefs/" alt="" />
+                      <img src="/assets/img/placeholder.png" alt="" />
                     </div>
                     <div class="content">
                       <h6 class="heading color-white">Thomas A. Peachey</h6>
@@ -487,7 +485,7 @@
                 >
                   <div class="team-hover">
                     <div class="image">
-                      <img src="assets/img/team/img2team.jpg" alt="" />
+                      <img src="/assets/img/placeholder.png" alt="" />
                     </div>
                     <div class="content">
                       <h6 class="heading color-white">Thomas A. Peachey</h6>
@@ -520,7 +518,7 @@
                 >
                   <div class="team-hover">
                     <div class="image">
-                      <img src="assets/img/team/img3team.jpg" alt="" />
+                      <img src="/assets/img/placeholder.png" alt="" />
                     </div>
                     <div class="content">
                       <h6 class="heading color-white">Thomas A. Peachey</h6>
@@ -553,7 +551,7 @@
                 >
                   <div class="team-hover">
                     <div class="image">
-                      <img src="assets/img/team/img4team.jpg" alt="" />
+                      <img src="/assets/img/placeholder.png" alt="" />
                     </div>
                     <div class="content">
                       <h6 class="heading color-white">Thomas A. Peachey</h6>
@@ -789,7 +787,7 @@
                         type="Email"
                         id="subscribe-email"
                         class="tb-my-input"
-                        placeholder="Enter Email Address"
+                        placeholdereholder="Enter Email Address"
                         required
                       />
                       <button
@@ -840,8 +838,7 @@
                 <div id="bottom" class="tf-bottom-inner">
                   <div class="Copyright">
                     <p>
-                      Copyright © 2021 The Kababi - Restaurant HTML Template.
-                      Designed by
+                      © 2022 All Rights Reserved By Perilune General Trading LLc
                       <a
                         href="https://themeforest.net/user/themesflat/portfolio"
                         >Themesflat</a
