--- a/products.html
+++ b/products.html
@@ -20,8 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/icon.png" />
+   <link rel="shortcut icon" href="assets/img/fev.png" />
   </head>
   <body class="header-fixed2">
     <div id="loading-overlay">
@@ -306,8 +305,7 @@
                 <div id="bottom" class="tf-bottom-inner">
                   <div class="Copyright">
                     <p>
-                      Copyright © 2021 The Kababi - Restaurant HTML Template.
-                      Designed by
+                      © 2022 All Rights Reserved By Perilune General Trading LLc
                       <a
                         href="https://themeforest.net/user/themesflat/portfolio"
                         >Themesflat</a
@@ -351,5 +349,5 @@
     <script src="assets/js/swiper.js"></script>
   </body>
 
-  <!-- Mirrored from themesflat.com/html/kababi/our-shop.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Jul 2022 17:03:10 GMT -->
+ 
 </html>
