--- a/contact.html
+++ b/contact.html
@@ -91,12 +91,10 @@
                 </div>
               </div>
               <div class="col-box col-55">
-                <div class="infor-contact border-style2">
+               <div class="infor-contact border-style2">
                   <h4 class="heading">Contact Us</h4>
                   <div class="text">
-                    Sit amet consectetur adipiscing elit sed eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Quis ipsum
-                    suspendisse ultrices gravida.
+                    We would love to hear from you
                   </div>
                   <div class="widget widget-info flex">
                     <div class="icon icon-afress">
@@ -104,8 +102,8 @@
                     </div>
                     <div class="infor-text">
                       <h6 class="title">Location</h6>
-                      <p>55 Main Street, 2nd Block,</p>
-                      <p>Melbourne, Australia</p>
+                  <p>  Office number: 201 - 051
+City Tower 2 Sheikh Zayed Road Dubai</p>
                     </div>
                   </div>
                   <div class="widget widget-info flex">
@@ -116,13 +114,11 @@
                       <h6 class="title">Email Address</h6>
                       <p>
                         <a
-                          href="https://themesflat.com/cdn-cgi/l/email-protection"
-                          class="__cf_email__"
-                          data-cfemail="99eaece9e9f6ebedd9fef4f8f0f5b7faf6f4"
-                          >[email&#160;protected]</a
+                       
+                          >Perilunegeneraltrading@gmail.com</a
                         >
                       </p>
-                      <p>www.kababiinfo.net</p>
+                      <p></p>
                     </div>
                   </div>
                   <div class="widget widget-info style2 flex">
@@ -131,8 +127,7 @@
                     </div>
                     <div class="infor-text">
                       <h6 class="title">Call Us</h6>
-                      <p>+012 (345) 667 89</p>
-                      <p>+12345678</p>
+                      <p>+971 50 593 0212</p>
                     </div>
                   </div>
                 </div>
@@ -141,17 +136,11 @@
           </div>
         </section>
 
-        <footer id="footer" class="footer-style01">
+       <footer id="footer" class="footer-style01">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-12">
-                <div id="site-logo-2" class="logo-footer">
-                  <a href="index.html"
-                    ><img src="assets/img/logo/logo2.png" alt="images"
-                  /></a>
-                </div>
-              </div>
-              <div class="col-md-2">
+             
+              <div class="col-md-3 offset-lg-1">
                 <div class="widget widget-link widget-footer">
                   <h4 class="widget-title">About</h4>
                   <ul class="widget-list">
@@ -163,68 +152,27 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-2">
-                <div class="widget widget-link widget-Facilities widget-footer">
-                  <h4 class="widget-title">Facilities</h4>
-                  <ul class="widget-list">
-                    <li><a href="#">The Fontus Spa</a></li>
-                    <li><a href="#">Experiences</a></li>
-                    <li><a href="#">Private Functions</a></li>
-                    <li><a href="#">Gallery, Events</a></li>
-                    <li><a href="#">Special Offers</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-4 no-pd-right">
-                <div
-                  class="widget widget-link widget-Newsletters widget-footer"
-                >
-                  <h4 class="widget-title">Newsletters</h4>
-                  <p>
-                    Dolor sit amet consectetur adipiscing elit sed do eiusmod
-                    tempor incididunt labore et dolore
-                  </p>
-                  <form
-                    action="#"
-                    id="subscribe-form"
-                    class="form-subscribe-footer"
-                  >
-                    <div id="subscribe-content" class="footer_input-footer">
-                      <input
-                        type="Email"
-                        id="subscribe-email"
-                        class="tb-my-input"
-                        placeholder="Enter Email Address"
-                        required
-                      />
-                      <button
-                        type="submit"
-                        id="subscribe-button"
-                        class="button"
-                      >
-                        <i class="far fa-arrow-right"></i>
-                      </button>
-                    </div>
-                  </form>
+              <div class="col-md-3">
+                <div id="site-logo-2" class="logo-footer">
+                  <a href="index.html"
+                    ><img src="assets/img/logo/logo2.png" alt="images"
+                  /></a>
                 </div>
               </div>
               <div class="col-md-4 no-pd-left">
                 <div class="widget widget-link widget-contact widget-footer">
                   <h4 class="widget-title">Contact</h4>
-                  <ul class="widget-list">
+                    <ul class="widget-list">
                     <li class="adress margin-right-1">
-                      56 Main Street, D-Block, 2nd Floor, Melbourne, Australia
+                            Office number: 201 - 051
+City Tower 2 Sheikh Zayed Road Dubai
                     </li>
                     <li class="mail">
                       <a
-                        href="https://themesflat.com/cdn-cgi/l/email-protection"
-                        class="__cf_email__"
-                        data-cfemail="e4979194948b9690a48389858d88ca878b89"
-                        >[email&#160;protected]</a
+                        >Perilunegeneraltrading@gmail.com</a
                       >
                     </li>
-                    <li class="phone">+012 (345) 67 899</li>
-                    <li class="clock">08 am - 06 pm</li>
+                    <li class="phone">+971 50 593 0212</li>
                   </ul>
                 </div>
               </div>
@@ -236,7 +184,7 @@
                   data-wow-duration="1000ms"
                 >
                   <a id="scroll-top">
-                    <img src="assets/img/footer/iconup%402x.png" alt="images" />
+                    <img src="assets/img/fot.png" alt="images" />
                   </a>
                 </div>
               </div>
@@ -245,11 +193,7 @@
                 <div id="bottom" class="tf-bottom-inner">
                   <div class="Copyright">
                     <p>
-                      © 2022 All Rights Reserved By Perilune General Trading LLc
-                      <a
-                        href="https://themeforest.net/user/themesflat/portfolio"
-                        >Themesflat</a
-                      >
+                      © 2022 All Rights Reserved By Perilune
                     </p>
                   </div>
                   <ul class="widget widget_socials">
