--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,13 @@
               </div>
               <nav id="main-nav" class="main-nav">
                 <ul id="menu-primary-menu" class="menu">
-                  <li class="menu-item">
+                  <li class="menu-item ">
                     <a href="index.html">Home</a>
                   </li>
                   <li class="menu-item">
                     <a href="about.html">About</a>
                   </li>
-                  <li class="menu-item">
+                  <li class="menu-item ">
                     <a href="products.html">Our Products</a>
                   </li>
                   <li class="menu-item">
@@ -55,11 +55,18 @@
                   </li>
                 </ul>
               </nav>
+              <div class="header-contact">
+                <span class="address">
+                  <i class="icon-kababicall"></i>
+                  +91-71 50 593 0212
+                </span>
+               
+              </div>
             </div>
           </div>
         </header>
 
-        <section class="page-title page-title-inner">
+        <section class="page-title page-title-inner" style="background-image: url(/assets/img/contact.jpg) ;">
           <div class="overlay-pagetitle"></div>
           <div class="container-fluid">
             <div class="row">
@@ -124,10 +131,12 @@ City Tower 2 Sheikh Zayed Road Dubai</p>
                   <div class="widget widget-info style2 flex">
                     <div class="icon icon-call">
                       <i class="icon-kababicall"></i>
+                      <img src="/assets/img/whatsapp.png" class="icon">
                     </div>
                     <div class="infor-text">
-                      <h6 class="title">Call Us</h6>
-                      <p>+971 50 593 0212</p>
+                      <!-- <h6 class="title">Call Us</h6> -->
+                      <p>+91 71 50 593 0212</p>
+                      <p>+91 701 172 663</p>
                     </div>
                   </div>
                 </div>
