--- a/index.html
+++ b/index.html
@@ -236,21 +236,10 @@
           </div>
         </div>
       </section>
+      
       <section class="tf-section tf-blog">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12 cleafix">
-              <div class="content-heading-wrap">
-                <div class="tf-heading-bg cleafix">
-                  <h2 class="heading-bg-style ">Our blog</h2>
-                </div>
-                <div class="tf-heading text-center">
-                  <h4 class="tf-title wow zoomIn animated" data-wow-delay="0.3ms" data-wow-duration="1200ms">latest news
-                    & blog</h4>
-                  <p class="tf-sub-heading">Best foods for you & family</p>
-                </div>
-              </div>
-            </div>
             <div class="col-md-12">
               <div class="swiper-container carousel-3">
                 <div class="swiper-wrapper">
@@ -258,21 +247,7 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img1blohhome01.jpg" alt="images">
-                        </div>
-                        <div class="content-post bg-blog">
-                          <ul class="meta-post">
-                            <li class="author"><a href="shop-details.html">By Williamson</a></li>
-                            <li class="date"><a href="shop-details.html">25 Aug 2021</a></li>
-                          </ul>
-                          <h6 class="title">
-                            <a href="shop-details.html">
-                              How To Run A UX Audit For Major EdTech Platform Case Study
-                            </a>
-                          </h6>
-                          <div class="btn-blog">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
+                          <img src="assets/img/fr.jpg" alt="images">
                         </div>
                       </div>
                     </div>
@@ -281,21 +256,7 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img2blohhome01.jpg" alt="images">
-                        </div>
-                        <div class="content-post bg-blog">
-                          <ul class="meta-post">
-                            <li class="author"><a href="shop-details.html">By Williamson</a></li>
-                            <li class="date"><a href="shop-details.html">25 Aug 2021</a></li>
-                          </ul>
-                          <h6 class="title">
-                            <a href="shop-details.html">
-                              Designing With Code A Modern Approach To Development
-                            </a>
-                          </h6>
-                          <div class="btn-blog active">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
+                          <img src="assets/img/veg.jpg" alt="images">
                         </div>
                       </div>
                     </div>
@@ -304,22 +265,9 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img3blohhome01.jpg" alt="images">
+                          <img src="assets/img/grains.webp" alt="images">
                         </div>
-                        <div class="content-post bg-blog">
-                          <ul class="meta-post">
-                            <li class="author"><a href="shop-details.html">By Williamson</a></li>
-                            <li class="date"><a href="shop-details.html">25 Aug 2021</a></li>
-                          </ul>
-                          <h6 class="title">
-                            <a href="shop-details.html">
-                              How To Run A UX Audit For Major EdTech Platform Case Study
-                            </a>
-                          </h6>
-                          <div class="btn-blog">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
-                        </div>
+                       
                       </div>
                     </div>
                   </div>
@@ -329,6 +277,7 @@
           </div>
         </div>
       </section>
+      <!-- sec -->
       <section class="tf-section wrap-about-us">
         <div class="container-fluid cleafix">
           <div class="row">
@@ -428,6 +377,7 @@
           </div>
         </div>
       </section>
+      <!--  -->
       <section class="tf-section wrap-testimonials bg-style2">
         <img class="icon-bg1" src="assets/img/Testimonial/iconbg1.png" alt="images" />
         <img class="icon-bg2" src="assets/img/Testimonial/iconbg2.png" alt="images" />
@@ -501,6 +451,7 @@
           </div>
         </div>
       </section>
+      <!--  -->
       <section class="tf-section tf-blog">
         <div class="container-fluid">
           <div class="row">
@@ -594,6 +545,7 @@
           </div>
         </div>
       </section>
+<!--  -->
       <section class="tf-section contact-us">
         <div class="container-fluid">
           <div class="row">
@@ -642,7 +594,7 @@
                     <img src="/assets/img/whatsapp.png" class="icon">
                   </div>
                   <div class="infor-text">
-                    <h6 class="title">Call Us</h6>
+                    <!-- <h6 class="title">Call Us</h6> -->
                     <p>+91 71 50 593 0212</p>
                     <p>+91 701 172 663</p>
                   </div>
