--- a/products.html
+++ b/products.html
@@ -28,11 +28,6 @@
     </div>
     <div id="wrapper">
       <div id="page" class="clearfix">
-        <div id="top-bar" class="top-bar-inner-page">
-          <div class="top-bar-content">
-            <p>Welcome to Kababi a Best Quality Restaurant</p>
-          </div>
-        </div>
         <header id="site-header" class="site-header-inner-page">
           <div id="site-header-inner" class="container-fluid">
             <div class="wrap-inner flex">
@@ -60,12 +55,18 @@
                   </li>
                 </ul>
               </nav>
-      
+              <div class="header-contact">
+                <span class="address">
+                  <i class="icon-kababicall"></i>
+                  +91-71 50 593 0212
+                </span>
+               
+              </div>
             </div>
           </div>
         </header>
 
-        <section class="page-title page-title-inner">
+        <section class="page-title page-title-inner" style="background-image: url(/assets/img/prodct.jpg) ;">
           <div class="overlay-pagetitle"></div>
           <div class="container-fluid">
             <div class="row">
