--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img1blohhome01.jpg" alt="images">
+                          <img src="assets/img/PRODUCTS/apple.png" alt="images">
                         </div>
                         <div class="content-post bg-blog">
                           <ul class="meta-post">
@@ -497,7 +497,7 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img2blohhome01.jpg" alt="images">
+                          <img src="assets/img/PRODUCTS/apple.png" alt="images">
                         </div>
                         <div class="content-post bg-blog">
                           <ul class="meta-post">
@@ -520,7 +520,7 @@
                     <div class="slider-item ">
                       <div class="post wow fadeIn animated" data-wow-delay="0.3ms" data-wow-duration="1500ms">
                         <div class="featured-post">
-                          <img src="assets/img/blog/img3blohhome01.jpg" alt="images">
+                          <img src="assets/img/PRODUCTS/oranges.png" alt="images">
                         </div>
                         <div class="content-post bg-blog">
                           <ul class="meta-post">
