--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <li class="menu-item ">
                   <a href="products.html">Our Products</a>
                 </li>
+                <li class="menu-item ">
+                  <a href="#blog">Blog</a>
+                </li>
                 <li class="menu-item">
                   <a href="contact.html">Contact</a>
                 </li>
@@ -452,7 +455,7 @@
         </div>
       </section>
       <!--  -->
-      <section class="tf-section tf-blog">
+      <section class="tf-section tf-blog" id="blog">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-12 cleafix">
@@ -486,9 +489,6 @@
                               How To Run A UX Audit For Major EdTech Platform Case Study
                             </a>
                           </h6>
-                          <div class="btn-blog">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
                         </div>
                       </div>
                     </div>
@@ -509,9 +509,6 @@
                               Designing With Code A Modern Approach To Development
                             </a>
                           </h6>
-                          <div class="btn-blog active">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
                         </div>
                       </div>
                     </div>
@@ -532,9 +529,6 @@
                               How To Run A UX Audit For Major EdTech Platform Case Study
                             </a>
                           </h6>
-                          <div class="btn-blog">
-                            <a href="shop-details.html" class="tf-button color-style color-style4">read more</a>
-                          </div>
                         </div>
                       </div>
                     </div>
