--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,9 @@
                   <li class="menu-item ">
                     <a href="products.html">Our Products</a>
                   </li>
+                  <li class="menu-item ">
+                    <a href="#blog">Blog</a>
+                  </li>
                   <li class="menu-item">
                     <a href="contact.html">Contact</a>
                   </li>
