--- a/products.html
+++ b/products.html
@@ -239,6 +239,79 @@
                 </div>
               </div>
             </div>
+
+            <!-- sa -->
+            <div class="row">
+              <div class="col-box col-box2 col-12">
+                <div class="items-shop">
+                  <div class="item-box2">
+                    <div class="item">
+                      <div class="">
+                        <div class="image">
+                          <img
+                            src="assets/img/PRODUCTS/Wheat-Flour.png"
+                            alt="images"
+                          />
+                        </div>
+                      </div>
+                      <div class="product-content">
+                        <h6 class="name-product">Wheat Flour</h6>
+                        <p class="pricing">Imported from Gujrat </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-box2">
+                    <div class="item">
+                      <div class="">
+                        <div class="image">
+                          <img
+                            src="assets/img/PRODUCTS/Refined-Flour.png"
+                            alt="images"
+                          />
+                        </div>
+                      </div>
+                      <div class="product-content">
+                        <h6 class="name-product">Refined Flour</h6>
+                        <p class="pricing">Imported from Gujrat</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-box2">
+                    <div class="item">
+                      <div class="">
+                        <div class="image">
+                          <img
+                            src="assets/img/PRODUCTS/Coconut.png"
+                            alt="images"
+                          />
+                        </div>
+                      </div>
+                      <div class="product-content">
+                        <h6 class="name-product">Coconut</h6>
+                        <p class="pricing">Imported from Pollachi</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="item-box2">
+                    <div class="item">
+                      <div class="">
+                        <div class="image">
+                          <img
+                            src="assets/img/PRODUCTS/onion.png"
+                            alt="images"
+                          />
+                        </div>
+                      </div>
+                      <div class="product-content">
+                        <h6 class="name-product">Onion</h6>
+                        <p class="pricing">Imported from Nasik and Pune</p>
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <section class="tf-section wrap-our-chefs style2">
